--- a/index.html
+++ b/index.html
@@ -182,7 +182,7 @@
   </div>
   
   
-  <script src='http://www.goat1000.com/tagcanvas.min.js'></script>
+  <script src='https://www.goat1000.com/tagcanvas.min.js'></script>
   <script src="src/index.js"></script>
   
  </body>
