--- a/index.html
+++ b/index.html
@@ -49,8 +49,8 @@
       
       <div class="col-9 text-center">  <i class="fas fa-cloud-rain" id="weather-icon"></i> </div>
       <div class="row g-2"> <div class="col-3"></div>  
-      <div class="col-8 " id="description-block">  <h4 id="description-text"></h4> </div> </div>
-      <div class="text-center" > <h1 id="displayed-city-name">" "</h1> </div>
+      <div class="col-8 " id="description-block">  <h4 id="description-text">API is down</h4> </div></div>
+      <div class="text-center" > <h1 id="displayed-city-name">Sorry! :(</h1> </div>
       
      </div>
     </div>
@@ -69,7 +69,7 @@
             <!--Date-->  
             <div class="col-5"> <div class="text-center p-2" style="border-radius: 10px; background-color: none;">  <h3 id="date"></h3>  </div> </div>   
             <!--temp--> 
-            <div class="col-5">  <div class="p-6 text-center" style="position: relative;"> <h1 id="today-temp">"  "</h1></div>  </div>          
+            <div class="col-5">  <div class="p-6 text-center" style="position: relative;"> <h1 id="today-temp">Error</h1></div>  </div>          
             <!--hum wind-->  
             <div class="col-5"> 
               <div class="text-center" style="position:relative; font-size: 35px;">
