--- a/index.html
+++ b/index.html
@@ -49,8 +49,8 @@
       
       <div class="col-9 text-center">  <i class="fas fa-cloud-rain" id="weather-icon"></i> </div>
       <div class="row g-2"> <div class="col-3"></div>  
-      <div class="col-8 " id="description-block">  <h4 id="description-text">API is down</h4> </div></div>
-      <div class="text-center" > <h1 id="displayed-city-name">Sorry! :(</h1> </div>
+      <div class="col-8 " id="description-block">  <h4 id="description-text">Sorry!</h4> </div></div>
+      <div class="text-center" > <h1 id="displayed-city-name">API is down</h1> </div>
       
      </div>
     </div>
