--- a/index.html
+++ b/index.html
@@ -22,7 +22,8 @@
     <div class="video-container">
 
       <video autoplay loop muted width="100%">
-          <source src="https://player.vimeo.com/external/563130035.hd.mp4?s=5bd311f698519ffa90aa5136b96d1e86aa78d107&amp;profile_id=175" type="video/mp4" />  </video>     </div>  </div>
+          <source src="https://player.vimeo.com/external/563130035.hd.mp4?s=5bd311f698519ffa90aa5136b96d1e86aa78d107&amp;profile_id=175" type="video/mp4" style="height:100%;""
+          poster="https://www.kimiaviation.com/thumbs/1800x1170/gfx/Kimi_seamless_video_first_frame.jpg"/>  </video>     </div>  </div>
   
   <div id="regular-website">    
     
