isometric dashboard cannot be highlighted now

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
       </div>
       <div id="regular-website">
         <div class="row">
-          <div class="col-8">
+          <div class="col-8 no_highlights">
             <div class="container right-side-plane">
               <div class="row">
                 <div class="col-6"></div>
@@ -203,7 +203,7 @@
               </form>
             </div>
           </div>
-          <div class="row">
+          <div class="row no_highlights">
             <div class="col">
               <div class="container right-side-plane">
                 <div class="row">
